Fixing bug 419093. Make access to undeclared global properties fast too! r+sr=brendan@mozilla.org